--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -76,7 +76,7 @@ body, html {
                  border: .5px solid #eee;
                  display:inline-block;
                  padding: .2em .25em;
-                 width: 300px;
+                 width: 200px;
              }
 
             button {
@@ -110,4 +110,36 @@ body, html {
 {
     text-align: center;
     width: 85%
+}
+.form-control {
+    display: inline-block;
+    width: 75%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn-primary {
+    margin: 1% 9px 2px 10px !important;
+    position: relative;
+    bottom: 4px;
+}
+.todo ul li {
+    align-items: center;
+    display: inline-block;
+    flex-direction: row;
+    font-size: .75em;
+    margin: .75em .5em;
+}
+.navbar-light .navbar-brand
+{
+    margin: 0 auto;
 }
